--- a/08_Events/style.css
+++ b/08_Events/style.css
@@ -4,3 +4,25 @@
     height: 150px;
     background-color: #808080;
 }
+
+.boxHover {
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    background-color: lightseagreen;
+}
+
+.boxContainer {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    width: 80%;
+    margin: 20px auto;
+    gap: 10px;
+}
+
+.superBox {
+    display: inline-block;
+    width: 500px;
+    height: 500px;
+    background-color: grey;
+}
